Some layout changes, added more gifs

--- a/app/src/main/res/layout/activity_gif_content.xml
+++ b/app/src/main/res/layout/activity_gif_content.xml
@@ -26,7 +26,8 @@
             android:id="@+id/gifView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="gif"
+            android:contentDescription="@string/content_description_gif"
+            android:scaleType="fitCenter"
             tools:src="@drawable/hello_pusheen" />
 
         <ImageView
@@ -34,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:contentDescription="@string/content_description_play_pause"
             android:src="@android:drawable/ic_media_play"
             android:visibility="gone"
             tools:visibility="visible" />
