--- a/app/src/main/res/layout/listitem_gif_data.xml
+++ b/app/src/main/res/layout/listitem_gif_data.xml
@@ -13,6 +13,7 @@
         android:background="@drawable/listitem_background"
         android:padding="16dp"
         android:textSize="16sp"
+        android:textAlignment="center"
         tools:text="TextView" />
 
 </android.support.v7.widget.CardView>
