--- a/app/src/main/res/layout/activity_gif.xml
+++ b/app/src/main/res/layout/activity_gif.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:contentDescription="@string/content_description_enter_pip"
         app:srcCompat="@android:drawable/ic_menu_crop" />
 
 </android.support.design.widget.CoordinatorLayout>
